feat: textcontent aws s3 연결 완료